--- a/package.json
+++ b/package.json
@@ -9,17 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.2",
+    "lodash": "^4.17.21",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.47",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-select": "^5.8.3",
+    "react-spinners": "^0.14.1",
     "tailwindcss": "3.4.14",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "zustand": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.13",
+    "prisma": "^5.22.0"
   }
 }
